--- a/efteraar2.html
+++ b/efteraar2.html
@@ -58,8 +58,8 @@
 <!--BAGGRUNDSBILLEDE-->
 <div class="hero-sektion position-relative">
     <picture>
-      <source media="(min-width: 768px)" srcset="img/foraar/heroforaar1.png">
-      <img src="img/foraar/heroforaar1mobil.png" alt="">
+      <source media="(min-width: 768px)" srcset="img/efteraar/heroefteraarstor2.png">
+      <img src="img/efteraar/herolilleefteraar2.png" alt="">
     </picture>
 
 </div>
