--- a/efteraar3.html
+++ b/efteraar3.html
@@ -58,8 +58,8 @@
 <!--BAGGRUNDSBILLEDE-->
 <div class="hero-sektion position-relative">
     <picture>
-      <source media="(min-width: 768px)" srcset="img/foraar/heroforaar1.png">
-      <img src="img/foraar/heroforaar1mobil.png" alt="">
+      <source media="(min-width: 768px)" srcset="img/efteraar/heroefteraarstor3.png">
+      <img src="img/efteraar/heroefteraarlille3.png" alt="">
     </picture>
 
 </div>
