--- a/foraar3.html
+++ b/foraar3.html
@@ -57,8 +57,8 @@
 <!--BAGGRUNDSBILLEDE-->
 <div class="hero-sektion position-relative">
     <picture>
-      <source media="(min-width: 768px)" srcset="img/foraar/heroforaar1.png">
-      <img src="img/foraar/heroforaar1mobil.png" alt="">
+      <source media="(min-width: 768px)" srcset="img/foraar/heroforaarstor3.png">
+      <img src="img/foraar/herolilleforaar3.png" alt="">
     </picture>
 
 </div>
