--- a/index.html
+++ b/index.html
@@ -102,6 +102,8 @@
         <div class="mx-sm-5">
           <h2>Årstidens Opskrifter</h2>
 
+          <img src="img/sommer/sommer1billede2.png" alt="">
+
           <!--Aktuel årstid-->
           <!--JS tilføjer billede og tekst-->
           <div id="current-season" class="season-banner">
@@ -109,7 +111,11 @@
           <br>
           <!--Andre årstider-->
           <h3>Udforsk andre årstider</h3>
-          <div id="other-seasons" class="season-row" ></div>
+          
+          <img class="col-4" src="img/foraar/foraar1billede2.png" alt="">
+          <img class="col-4" src="img/efteraar/efteraar1billede2.png" alt="">
+          <img class="col-4" src="img/vinter/vinter1billede2.png" alt="">
+
         </div>
     </div>
 </div>
