--- a/alleopskrifter.html
+++ b/alleopskrifter.html
@@ -331,12 +331,12 @@
                   </div>
               </div>
 
-              <div class="row mt-2">
-                <div class="hjerte col-sm-6 col-md-4 text-end align-items-between">
+              <div class="row mt-5">
+                <div class="hjerte col-4 text-end align-items-between">
                   <!-- fs-1 gør det størrer -->
-                   <img src="img/footer-hjerte.png" alt="">
+                  <i class="bi bi-suit-heart fs-3"></i>
                 </div>
-                <div class="col-8 text-end ps-5 mt-5">
+                <div class="col-8 text-end ps-5">
                   <a href=""><i class="bi bi-instagram m-2 fs-3"></i></a>
                   <a href=""><i class="bi bi-tiktok fs-3"></i></a>
                 </div>
