--- a/efteraar3.html
+++ b/efteraar3.html
@@ -52,38 +52,36 @@
   </div>
 </nav>
 
-
-
 <!--HERO-SEKTION-->
 <!--BAGGRUNDSBILLEDE-->
 <div class="hero-sektion position-relative">
-    <picture>
-      <source media="(min-width: 768px)" srcset="img/efteraar/heroefteraarstor3.png">
-      <img src="img/efteraar/heroefteraarlille3.png" alt="">
-    </picture>
+  <picture>
+    <source media="(min-width: 768px)" srcset="img/efteraar/heroefteraarstor1.png">
+    <img src="img/efteraar/herolilleefteraar1.png" alt="">
+  </picture>
 
 </div>
 
 <!--TEKST UNDER HERO-->
 
 <div class="container my-sm-5 px-sm-5">
-  <h2>Pasta med tomat, spidskål og ramsløgspesto</h2>
+<h2>Efterårspande med karamelliserede porrer og gulerødder</h2>
 </div>
 
 <!--INTRODUKTIONS-AFSNIT-->
 <div class="container">
-  <div class="row align-items-start my-5 mx-sm-4">
-    <!--Tekstfelt m. introduktion til side-->
-    <!--Tekst skal fylde 12 kol. på mobil og op efter 8 kol. -->
-    <div class="col-12 col-sm-6">
-      <p>Lækker, lun og klar på en solrig forårsaften! Pastaen vendes med cremet ramsløgspesto, søde tomater og letstegt spidskål – simpel hverdagslykke i en skål</p>
-    </div>
-    <!--Illustration til højre-->
-    <!--Illustration skal ikke vises på mobil. Op efter fylder den 2 kol. og har 2 tomme kol. til venstre-->
-    <div class="d-none d-sm-block col-sm-2 offset-sm-4">
-      <img src="#" alt="illustration">
-    </div>
+<div class="row align-items-start my-5 mx-sm-4">
+  <!--Tekstfelt m. introduktion til side-->
+  <!--Tekst skal fylde 12 kol. på mobil og op efter 8 kol. -->
+  <div class="col-12 col-sm-6">
+    <p>En lun og simpel hverdagsret med sødme fra stegte gulerødder, karamelliseret porre og et strejf af citron. Perfekt som hovedret med brød til – eller som tilbehør.</p>
   </div>
+  <!--Illustration til højre-->
+  <!--Illustration skal ikke vises på mobil. Op efter fylder den 2 kol. og har 2 tomme kol. til venstre-->
+  <div class="d-none d-sm-block col-sm-2 offset-sm-4">
+    <img src="img/illustrationer/lys.png" alt="illustration">
+  </div>
+</div>
 </div>
 
 
@@ -91,66 +89,65 @@
 <!--Info-linje om tid og antal per.-->
 <section class="container-fluid orange py-5">
 <section class="text-center">
-    <h2>Opskrift</h2>
+  <h2>Opskrift</h2>
 
 <!--Linje-->
 <hr class="linje">
 
 
 
-    <!--sætter hver p ved siden af hinanden horisontalt-->
-    <div class="d-flex justify-content-evenly">
-        <p>2 personer</p>
-        <p>Arbejdstid: 20 min</p>
-        <p>Tid i alt: 50 min</p>
-    </div>
+  <!--sætter hver p ved siden af hinanden horisontalt-->
+  <div class="d-flex justify-content-evenly">
+      <p>2 personer</p>
+      <p>Arbejdstid: 15 min</p>
+      <p>Tid i alt: 25 min</p>
+  </div>
 </section>
 
 <!--Sektion m. billeder og fremgangsmåde-->
 <div class="container my-5 px-sm-5">
-  <div class="row align-items-start d-flex flex-column flex-md-column flex-lg-row">
+<div class="row align-items-start d-flex flex-column flex-md-column flex-lg-row">
 
-    <div class="col collage-opskrift-container">
-    	    <div class="ingredienser">
-                <h3>Ingredienser</h3>
-                    <ul>
-                        <li>150g pasta</li>
-                        <li>1 håndfuld spidskål</li>
-                        <li>8 cherrytomater</li>
-                        <li>1 håndfuld ramsløg</li>
-                        <li>1/2 dl olie</li>
-                        <li>1 spsk solsikkekerner</li>
-                        <li>Citronsaft</li>
-                    </ul>
-            </div>
+  <div class="col collage-opskrift-container">
+        <div class="ingredienser">
+              <h3>Ingredienser</h3>
+                  <ul>
+                      <li>2 porrer</li>
+                      <li>3 gulerødder</li>
+                      <li>1 fed hvidløg</li>
+                      <li>1 tsk smør eller olie</li>
+                      <li>1 tsk honning eller sukker</li>
+                      <li>Saft fra 1/2 citron</li>
+                      <li>Frisk timian eller persille</li>
+                  </ul>
+          </div>
 
-        <img src="img/foraar/foraar1billede1.png" class="billede opskrift-billede1" alt="">
-        <img src="img/foraar/foraar1billede2.png" class="billede opskrift-billede2" alt="">
-        <img src="img/foraar/foraar1billede3.png" class="billede opskrift-billede3" alt="">
-    </div>
-
-
-
-    <div class="col fremgangsmaade">
-      <h3>Fremgangsmåde</h3>
-        <p><strong>Kog pastaen</strong></p>
-            <p>Kog pastaen efter anvisning på pakken, og gem lidt kogevand til at justere konsistensen senere.</p>
-
-            <p><strong>Lav pestoen</strong></p>
-            <p>Blend ramsløg, olie, kerner, citron og lidt salt.</p>
-
-            <p><strong>Forbered grøntsagerne</strong></p>
-            <p>Snit spidskål fint og steg den hurtigt på en pande med lidt olie, indtil den falder sammen og bliver let karamelliseret.</p>
-            <p>Skær tomaterne i halve og kom dem på panden sammen med kålene de sidste minutter af tilberedningen, så de bliver let opvarmede og bløde.</p>
-
-            <p><strong>Samle retten</strong></p>
-            <p>Vend den kogte pasta med pesto, spidskål og tomater. Tilsæt lidt af pastavandet, hvis retten virker for tør.</p>
-
-            <p><strong>Server</strong></p>
-            <p>Server med ekstra pesto og evt. revet ost eller friskhakkede urter på toppen.</p>
-      
-    </div>
+      <img src="img/efteraar/efteraar3billede1.png" class="billede opskrift-billede1" alt="">
+      <img src="img/efteraar/efteraar3billede2.png" class="billede opskrift-billede2" alt="">
+      <img src="img/efteraar/efteraar3billede3.png" class="billede opskrift-billede3" alt="">
   </div>
+
+
+
+  <div class="col fremgangsmaade">
+    <h3>Fremgangsmåde</h3>
+      <p><strong>Forbered grønt</strong></p>
+          <p>Skær porrer i tykke skiver (ca. 1 cm). Skræl gulerødder og skær dem i skrå skiver eller tynde stave. Hak hvidløg.
+          </p>
+
+          <p><strong>Steg porrerne:</strong></p>
+          <p>Varm smør eller olie på en stor pande. Læg porreskiverne med snitfladen nedad og steg dem ved middel varme i 5–7 minutter, til de er gyldne. Vend dem og tilsæt honning/sukker. Lad dem karamellisere kort og tag dem af panden.</p>
+
+          <p><strong>Steg gulerødderne</strong></p>
+          <p>På samme pande: Steg gulerødder og hvidløg i lidt ekstra olie i 7–8 minutter, til de er møre men stadig har bid.</p>
+
+          <p><strong>Vend sammen</strong></p>
+          <p>Kom porrerne tilbage på panden og dryp med citronsaft. Smag til med salt, peber og evt. friske urter..</p>
+
+          <p><strong> Server</strong></p>
+          <p>Server som den er – eller med et stykke brød, lidt linser eller smuldret feta på toppen.</p>
+  </div>
+</div>
 </div>
 
 </section>
@@ -160,30 +157,32 @@
 
 <!--Musik-->
 <section class="container playlist-section my-5 px-sm-5">
-    <h3>Gør det hyggeligt!</h3>
-    <p>Hæld et glas hvidvin op og nyd vores playliste, mens du hygger dig med madlavningen</p>
+  <h3>Gør det hyggeligt!</h3>
+  <p>Hæld et glas hvidvin op og nyd vores playliste, mens du hygger dig med madlavningen</p>
 
-    <div class="spotify-embed">
-        <iframe src="https://open.spotify.com/embed/playlist/37i9dQZF1DX60OAKjsWlA2?utm_source=generator&theme=0"
-        width="100%" height="140" frameBorder="0" allowfullscreen=""
-        allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy">
-        </iframe>
-    </div>
+  <div class="spotify-embed">
+      <iframe src="https://open.spotify.com/embed/playlist/4dhFCqsEzmoX1FZnwBgfLp?utm_source=generator&theme=0"
+      width="100%" height="140" frameBorder="0" allowfullscreen=""
+      allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy">
+      </iframe>
+  </div>
 </section>
 
 
 <!--Andre opskrifter-->
 <section class="container my-5 px-sm-5">
-    <h3>Hvad skal du lave i morgen?</h3>
+  <h3>Hvad skal du lave i morgen?</h3>
 
-    <div class="d-flex flex-column flex-sm-row justify-content-center align-items-center gap-3 mt-3">
-        <a class="col-12 col-sm-5" href="foraar2.html">
-            <img src="img/stemning/digital1.png" alt="">
-        </a>
-        <a class="col-12 col-sm-5" href="foraar3.html">
-            <img src="img/stemning/digital2.png" alt="">
-        </a>
-    </div>
+  <div class="d-flex flex-column flex-sm-row justify-content-center align-items-center gap-3 mt-3">
+    <a class="col-12 col-sm-5" href="efteraar1.html">
+      <img src="img/efteraar/efteraar2billede2.png" alt=""><p>Efterårs-gnocchi med tomat, salvie og karamelliseret løg</p>
+  </a>
+    <a class="col-12 col-sm-5" href="efteraar2.html">
+      <img src="img/efteraar/efteraar3billede2.png" alt=""> <p>Efterårspande med karamelliserede porrer og gulerødder</p>
+  </a>
+
+
+  </div>
 </section>
 
 
@@ -191,70 +190,70 @@
 <!--Kommentarspor-->
 
 <div class="comment-section container d-flex flex-column flex-md-row  my-5 px-sm-5">
-  <div class="comment-form">
-    <h2>Har du spørgsmål til opskriften?</h2>
-    <p>Har du et spørgsmål til opskriften eller lyst til at sende en hilsen med et tip, så kan du skrive til os i kommentarfeltet herunder.</p>
-    <input type="text" id="nameInput" placeholder="Dit navn" />
-    <textarea id="commentInput" placeholder="Din kommentar"></textarea>
-    <button onclick="addComment()">Send</button>
-  </div>
-  
-  <div class="comment-list">
-    <h2>Kommentarer</h2>
-    <div id="commentsContainer"></div>
-  </div>
+<div class="comment-form">
+  <h2>Har du spørgsmål til opskriften?</h2>
+  <p>Har du et spørgsmål til opskriften eller lyst til at sende en hilsen med et tip, så kan du skrive til os i kommentarfeltet herunder.</p>
+  <input type="text" id="nameInput" placeholder="Dit navn" />
+  <textarea id="commentInput" placeholder="Din kommentar"></textarea>
+  <button onclick="addComment()">Send</button>
+</div>
+
+<div class="comment-list">
+  <h2>Kommentarer</h2>
+  <div id="commentsContainer"></div>
+</div>
 </div>
 
 
 <!-- Footer -->
 <footer class="py-4">
-  <div class="container d-flex flex-column align-items-center justify-content-center">
+<div class="container d-flex flex-column align-items-center justify-content-center">
 
-      <!-- Servietbillede som baggrund -->
-      <div class="position-relative py-5 py-md-5">
-          <picture>
-              <source media="(min-width: 768px)" srcset="img/storserviet.png">
-              <img src="img/lilleserviet.png" alt="Serviet" >
-          </picture>
+    <!-- Servietbillede som baggrund -->
+    <div class="position-relative py-5 py-md-5">
+        <picture>
+            <source media="(min-width: 768px)" srcset="img/storserviet.png">
+            <img src="img/lilleserviet.png" alt="Serviet" >
+        </picture>
 
-          <!-- Tekst ovenpå billedet -->
-          <div class="kontakt-boks position-absolute top-50 start-50 translate-middle">
-              <h3>Kontakt os:</h3>
+        <!-- Tekst ovenpå billedet -->
+        <div class="kontakt-boks position-absolute top-50 start-50 translate-middle">
+            <h3>Kontakt os:</h3>
 
-              <div class="row justify-content-center">
-                  <div class="telefon col-12 col-md-6">
-                      <p>Telefon.nr.:</p>
-                      <a href="tel:+45 27 14 78">+45 27 14 78 **</a>
-                  </div>
+            <div class="row justify-content-center">
+                <div class="telefon col-12 col-md-6">
+                    <p>Telefon.nr.:</p>
+                    <a href="tel:+45 27 14 78">+45 27 14 78 **</a>
+                </div>
 
-                  <div class="mail col-12 col-md-6">
-                      <p>Mail:</p>
-                      <a href="mailto:lille@skaal.dk">lille@skaal.dk</a>
-                  </div>
+                <div class="mail col-12 col-md-6">
+                    <p>Mail:</p>
+                    <a href="mailto:lille@skaal.dk">lille@skaal.dk</a>
+                </div>
+            </div>
+
+            <div class="row mt-5">
+              <div class="hjerte col-4 text-end align-items-between">
+                <!-- fs-1 gør det størrer -->
+                <i class="bi bi-suit-heart fs-3"></i>
               </div>
+              <div class="col-8 text-end ps-5">
+                <a href=""><i class="bi bi-instagram m-2 fs-3"></i></a>
+                <a href=""><i class="bi bi-tiktok fs-3"></i></a>
+              </div>
+        </div>
+    </div>
 
-              <div class="row mt-5">
-                <div class="hjerte col-4 text-end align-items-between">
-                  <!-- fs-1 gør det størrer -->
-                  <i class="bi bi-suit-heart fs-3"></i>
-                </div>
-                <div class="col-8 text-end ps-5">
-                  <a href=""><i class="bi bi-instagram m-2 fs-3"></i></a>
-                  <a href=""><i class="bi bi-tiktok fs-3"></i></a>
-                </div>
-          </div>
-      </div>
-
-  </div>
+</div>
 </footer>
 
-    
+  
 
 
 
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
 
-    <script src="script.js"></script>
-  </body>
+  <script src="script.js"></script>
+</body>
 </html>
