--- a/alleopskrifter.html
+++ b/alleopskrifter.html
@@ -304,7 +304,7 @@
 
 
 
-<!--Footer-->
+<!-- Footer -->
 <footer class="py-4">
   <div class="container d-flex flex-column align-items-center justify-content-center">
 
@@ -331,12 +331,12 @@
                   </div>
               </div>
 
-              <div class="row mt-2">
-                <div class="hjerte col-sm-6 col-md-4 text-end align-items-between">
+              <div class="row mt-5">
+                <div class="hjerte col-4 text-end align-items-between">
                   <!-- fs-1 gør det størrer -->
-                   <img src="img/footer-hjerte.png" alt="">
+                  <i class="bi bi-suit-heart fs-3"></i>
                 </div>
-                <div class="col-8 text-end ps-5 mt-5">
+                <div class="col-8 text-end ps-5">
                   <a href=""><i class="bi bi-instagram m-2 fs-3"></i></a>
                   <a href=""><i class="bi bi-tiktok fs-3"></i></a>
                 </div>
@@ -345,6 +345,7 @@
 
   </div>
 </footer>
+
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
