--- a/vinter.html
+++ b/vinter.html
@@ -61,8 +61,8 @@
     <!--position-relative: gør container til ref. for det, som skal placeres ovenpå-->
     <div class="hero-sektion position-relative">
         <picture>
-            <source media="(min-width: 768px)" srcset="https://placehold.co/1240x400">
-            <img src="https://placehold.co/100x100" alt="">
+            <source media="(min-width: 768px)" srcset="img/vinter/vinterhero.png">
+            <img src="img/vinter/vinterheromobil.png" alt="">
         </picture>
 
 
