--- a/alleopskrifter.html
+++ b/alleopskrifter.html
@@ -79,20 +79,20 @@
 
 <!--Forår opskrifter-->
 <div id="alle-foraar" class="container-fluid orange d-none d-md-block">
-  <div class="container py-5">
+  <div class="container py-5 ">
     <div class="row align-items-start px-5">
         <h2>Forår</h2>
-             <div class="col">
+             <div class="col text-center">
             <a href="foraar1.html"><img src="img/foraar/foraaropskrift1.png" alt=""></a>
-            <a href="foraar1.html"><h3>Opskrift</h3></a>
+            <a href="foraar1.html"><h3>Pasta med tomat, spidskål og ramsløgspesto</h3></a>
             </div>
-        <div class="col">
+        <div class="col text-center">
         <a href="foraar2.html"><img src="img/foraar/foraar2billede1.png" alt=""></a>
-        <a href="foraar2.html"><h3>Opskrift</h3></a>
+        <a href="foraar2.html"><h3>Forårs-orzo med tomater og citron</h3></a>
         </div>
-    <div class="col">
+    <div class="col text-center">
       <a href="foraar3.html"><img src="img/foraar/foraar3billede2.png" alt=""></a>
-      <a href="foraar3.html"><h3>Opskrift</h3></a>
+      <a href="foraar3.html"><h3>Forårsnudler med radiser, porre og sesam</h3></a>
     </div>
     </div>
    
@@ -103,17 +103,17 @@
 <div id="alle-sommer" class="container d-none d-md-block">
   <div class="row align-items-start py-5 px-5">
     <h2>Sommer</h2>
-    <div class="col">
+    <div class="col text-center">
       <a href="sommer1.html"><img src="img/sommer/sommer1billede1.png" alt=""></a>
-      <a href="sommer1.html"><h3>Opskrift</h3></a>
+      <a href="sommer1.html"><h3>Sommersalat med jordbær, burrata og nem focaccia</h3></a>
     </div>
-    <div class="col">
+    <div class="col text-center">
       <a href="sommer2.html"><img src="img/sommer1.png" alt=""></a>
-      <a href="sommer2.html"><h3>Opskrift</h3></a>
+      <a href="sommer2.html"><h3>Sommer-tacos med ærtemos og grillede grøntsager</h3></a>
     </div>
-    <div class="col">
+    <div class="col text-center">
       <a href="sommer3.html"><img src="img/sommer/sommer3billede1.png" alt=""></a>
-      <a href="sommer3.html"><h3>Opskrift</h3></a>
+      <a href="sommer3.html"><h3>Sommerpizza med sæsonens grønt og sprød bund</h3></a>
     </div>
   </div>
 </div>
@@ -123,17 +123,17 @@
   <div class="container py-5">
         <div class="row align-items-start px-5">
             <h2>Efterår</h2>
-            <div class="col">
+            <div class="col text-center">
                 <a href="efteraar1.html"><img src="img/efteraar/efteraar1billede2.png" alt=""></a>
-                <a href="efteraar1.html"><h3>Opskrift</h3></a>
+                <a href="efteraar1.html"><h3>Efterårssuppe med Hokkaido, gulerod og ingefær</h3></a>
             </div>
-            <div class="col">
+            <div class="col text-center">
                 <a href="efteraar2.html"><img src="img/efteraar/efteraar2billede1.png" alt=""></a>
-                <a href="efteraar2.html"><h3>Opskrift</h3></a>
+                <a href="efteraar2.html"><h3>Efterårs-gnocchi med tomat, salvie og karamelliseret løg</h3></a>
             </div>
-            <div class="col">
-                <a href="efteraar3.html"><img src="https://placehold.co/80x100" alt=""></a>
-                <a href="efteraar3.html"><h3>Opskrift</h3></a>
+            <div class="col text-center">
+                <a href="efteraar3.html"><img src="img/efteraar/efteraarbillede.png" alt=""></a>
+                <a href="efteraar3.html"><h3>Efterårspande med karamelliserede porrer og gulerødder</h3></a>
             </div>
         </div>
   </div>
@@ -143,17 +143,17 @@
 <div id="alle-vinter" class="container d-none d-md-block">
   <div class="row align-items-start my-5 px-5">
     <h2>Vinter</h2>
-    <div class="col">
+    <div class="col text-center">
       <a href="vinter1.html"><img src="img/vinter/vinter1.png" alt=""></a>
-      <a href="vinter1.html"><h3>Opskrift</h3></a>
+      <a href="vinter1.html"><h3>Vinter-nudler med porre, kål og cremet sesamsauce</h3></a>
     </div>
-    <div class="col">
+    <div class="col text-center">
       <a href="vinter2.html"><img src="img/vinter/vinter2billede2.png" alt=""></a>
-      <a href="vinter2.html"><h3>Opskrift</h3></a>
+      <a href="vinter2.html"><h3>Vinterpasta med grønkålssauce og citron</h3></a>
     </div>
-    <div class="col">
+    <div class="col text-center">
       <a href="vinter3.html"><img src="img/vinter/vinter3billede1.png" alt=""></a>
-      <a href="vinter3.html"><h3>Opskrift</h3></a>
+      <a href="vinter3.html"><h3>Vinterpande med grønkål, svampe og flødestuvet perlebyg</h3></a>
     </div>
   </div>
 </div>
@@ -171,19 +171,19 @@
           <div class="carousel-item active text-center">
             <a href="foraar1.html">
               <img src="img/foraar/foraaropskrift1.png" class="d-block w-100" alt="Forår opskrift 1">
-              <h3>Opskrift</h3>
+              <h3>Pasta med tomat, spidskål og ramsløgspesto</h3>
             </a>
           </div>
           <div class="carousel-item text-center">
             <a href="foraar2.html">
               <img src="img/foraar/foraar2billede1.png" class="d-block w-100" alt="Forår opskrift 2">
-              <h3>Opskrift 2</h3>
+              <h3>Forårs-orzo med tomater og citron</h3>
             </a>
           </div>
           <div class="carousel-item text-center">
             <a href="foraar3.html">
               <img src="img/foraar/foraar3billede2.png" class="d-block w-100" alt="Forår opskrift 3">
-              <h3>Opskrift 3</h3>
+              <h3>Forårsnudler med radiser, porre og sesam</h3>
             </a>
           </div>
         </div>
@@ -204,19 +204,19 @@
           <div class="carousel-item active text-center">
             <a href="sommer1.html">
               <img src="img/sommer/sommer1billede1.png" class="d-block w-100" alt="Sommer opskrift 1">
-              <h3>Opskrift</h3>
+              <h3>Sommersalat med jordbær, burrata og nem focaccia</h3>
             </a>
           </div>
           <div class="carousel-item text-center">
             <a href="sommer2.html">
               <img src="img/sommer1.png" class="d-block w-100" alt="Sommer opskrift 2">
-              <h3>Opskrift 2</h3>
+              <h3>OSommer-tacos med ærtemos og grillede grøntsager</h3>
             </a>
           </div>
           <div class="carousel-item text-center">
             <a href="sommer3.html">
               <img src="img/sommer/sommer3billede1.png" class="d-block w-100" alt="Sommer opskrift 3">
-              <h3>Opskrift 3</h3>
+              <h3>Sommerpizza med sæsonens grønt og sprød bund</h3>
             </a>
           </div>
         </div>
@@ -237,19 +237,19 @@
           <div class="carousel-item active text-center">
             <a href="efteraar1.html">
               <img src="img/efteraar/efteraar1billede2.png" class="d-block w-100" alt="Efterår opskrift 1">
-              <h3>Opskrift</h3>
+              <h3>Efterårssuppe med Hokkaido, gulerod og ingefær</h3>
             </a>
           </div>
           <div class="carousel-item text-center">
             <a href="efteraar2.html">
               <img src="img/efteraar/efteraar1billede2.png" class="d-block w-100" alt="Efterår opskrift 2">
-              <h3>Opskrift 2</h3>
+              <h3>Efterårs-gnocchi med tomat, salvie og karamelliseret løg</h3>
             </a>
           </div>
           <div class="carousel-item text-center">
             <a href="efteraar3.html">
               <img src="img/efteraar/efteraar1billede2.png" class="d-block w-100" alt="Efterår opskrift 3">
-              <h3>Opskrift 3</h3>
+              <h3>Efterårspande med karamelliserede porrer og gulerødder</h3>
             </a>
           </div>
         </div>
@@ -270,19 +270,19 @@
           <div class="carousel-item active text-center">
             <a href="vinter1.html">
               <img src="img/vinter/vinter1.png" class="d-block w-100" alt="Vinter opskrift 1">
-              <h3>Opskrift</h3>
+              <h3>Vinter-nudler med porre, kål og cremet sesamsauce</h3>
             </a>
           </div>
           <div class="carousel-item text-center">
             <a href="vinter2.html">
               <img src="img/vinter/vinter2billede2.png" class="d-block w-100" alt="Vinter opskrift 2">
-              <h3>Opskrift 2</h3>
+              <h3>Vinterpasta med grønkålssauce og citron</h3>
             </a>
           </div>
           <div class="carousel-item text-center">
             <a href="vinter3.html">
               <img src="img/vinter/vinter3billede1.png" class="d-block w-100" alt="Vinter opskrift 3">
-              <h3>Opskrift 3</h3>
+              <h3>Vinterpande med grønkål, svampe og flødestuvet perlebyg</h3>
             </a>
           </div>
         </div>
