--- a/vinter2.html
+++ b/vinter2.html
@@ -67,7 +67,7 @@
 <!--TEKST UNDER HERO-->
 
 <div class="container my-sm-5 px-sm-5">
-  <h2>Pasta med tomat, spidskål og ramsløgspesto</h2>
+  <h2>Vinterpasta med grønkålssauce og citron</h2>
 </div>
 
 <!--INTRODUKTIONS-AFSNIT-->
@@ -76,12 +76,12 @@
     <!--Tekstfelt m. introduktion til side-->
     <!--Tekst skal fylde 12 kol. på mobil og op efter 8 kol. -->
     <div class="col-12 col-sm-6">
-      <p>Lækker, lun og klar på en solrig forårsaften! Pastaen vendes med cremet ramsløgspesto, søde tomater og letstegt spidskål – simpel hverdagslykke i en skål</p>
+      <p>En grøn, cremet pastaret med vinterens bedste bladgrønt – nem at lave og fyldt med varme og friskhed.</p>
     </div>
     <!--Illustration til højre-->
     <!--Illustration skal ikke vises på mobil. Op efter fylder den 2 kol. og har 2 tomme kol. til venstre-->
     <div class="d-none d-sm-block col-sm-2 offset-sm-4">
-      <img src="#" alt="illustration">
+      <img src="img/illustrationer/kaal.png" alt="illustration">
     </div>
   </div>
 </div>
@@ -102,7 +102,7 @@
     <div class="d-flex justify-content-evenly">
         <p>2 personer</p>
         <p>Arbejdstid: 20 min</p>
-        <p>Tid i alt: 50 min</p>
+        <p>Tid i alt: 25 min</p>
     </div>
 </section>
 
@@ -115,18 +115,18 @@
                 <h3>Ingredienser</h3>
                     <ul>
                         <li>150g pasta</li>
-                        <li>1 håndfuld spidskål</li>
-                        <li>8 cherrytomater</li>
-                        <li>1 håndfuld ramsløg</li>
-                        <li>1/2 dl olie</li>
-                        <li>1 spsk solsikkekerner</li>
-                        <li>Citronsaft</li>
+                        <li>1 stor håndfuld frisk grønkål</li>
+                        <li>1 fed hvidløg</li>
+                        <li>madlavningsfløde</li>
+                        <li>1/2 citron</li>
+                        <li>1 spsk smør eller olie</li>
+                        <li>Revet parmesan på toppen</li>
                     </ul>
             </div>
 
-        <img src="img/vinter/vinter2billede1.png" class="billede opskrift-billede1" alt="">
-        <img src="img/vinter/vinter2billede2.png" class="billede opskrift-billede2" alt="">
-        <img src="img/vinter/vinter2billede3.png" class="billede opskrift-billede3" alt="">
+        <img src="img/vinter/vinterlys.png" class="billede opskrift-billede1" alt="">
+        <img src="img/vinter/vinter2billede1.png" class="billede opskrift-billede2" alt="">
+        <img src="img/vinter/vinter2billede3ny.png" class="billede opskrift-billede3" alt="">
     </div>
 
 
@@ -134,21 +134,20 @@
     <div class="col fremgangsmaade">
       <h3>Fremgangsmåde</h3>
         <p><strong>Kog pastaen</strong></p>
-            <p>Kog pastaen efter anvisning på pakken, og gem lidt kogevand til at justere konsistensen senere.</p>
+            <p>Kog pastaen efter anvisning. Gem lidt af kogevandet.</p>
 
-            <p><strong>Lav pestoen</strong></p>
-            <p>Blend ramsløg, olie, kerner, citron og lidt salt.</p>
+            <p><strong>Lav grønkålssaucen</strong></p>
+            <p>Skyl grønkål og hak den groft</p>
+            <p>Svits hvidløg i olie eller smør på en pande.</p>
+            <p>Tilsæt grønkål og lidt vand, og lad det dampe mørt i 5–6 min.</p>
+            <p>Rør madlavningsfløden i i og blend det hele til en cremet sauce. Justér med lidt pastavand hvis den er for tyk.</p>
 
-            <p><strong>Forbered grøntsagerne</strong></p>
-            <p>Snit spidskål fint og steg den hurtigt på en pande med lidt olie, indtil den falder sammen og bliver let karamelliseret.</p>
-            <p>Skær tomaterne i halve og kom dem på panden sammen med kålene de sidste minutter af tilberedningen, så de bliver let opvarmede og bløde.</p>
 
-            <p><strong>Samle retten</strong></p>
-            <p>Vend den kogte pasta med pesto, spidskål og tomater. Tilsæt lidt af pastavandet, hvis retten virker for tør.</p>
+            <p><strong>Vend sammen</strong></p>
+            <p>Vend den varme pasta i saucen. Smag til med citronskal, lidt saft, salt og peber.</p>
 
             <p><strong>Server</strong></p>
-            <p>Server med ekstra pesto og evt. revet ost eller friskhakkede urter på toppen.</p>
-      
+            <p>Top med lidt revet ost, solsikkekerner eller bare som den er – varm, cremet og grønt.</p>
     </div>
   </div>
 </div>
@@ -163,12 +162,14 @@
     <h3>Gør det hyggeligt!</h3>
     <p>Hæld et glas hvidvin op og nyd vores playliste, mens du hygger dig med madlavningen</p>
 
+
     <div class="spotify-embed">
-        <iframe src="https://open.spotify.com/embed/playlist/37i9dQZF1DX60OAKjsWlA2?utm_source=generator&theme=0"
-        width="100%" height="140" frameBorder="0" allowfullscreen=""
-        allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy">
-        </iframe>
-    </div>
+      <iframe src="https://open.spotify.com/embed/playlist/1wd79oLAXj0oZdjOsVptYT?utm_source=generator&theme=0"
+      width="100%" height="140" frameBorder="0" allowfullscreen=""
+      allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy">
+      </iframe>
+  </div>
+
 </section>
 
 
@@ -177,11 +178,11 @@
     <h3>Hvad skal du lave i morgen?</h3>
 
     <div class="d-flex flex-column flex-sm-row justify-content-center align-items-center gap-3 mt-3">
-        <a class="col-12 col-sm-5" href="foraar2.html">
-            <img src="img/stemning/digital1.png" alt="">
-        </a>
-        <a class="col-12 col-sm-5" href="foraar3.html">
-            <img src="img/stemning/digital2.png" alt="">
+      <a class="col-12 col-sm-5" href="vinter3.html">
+        <img src="img/vinter/vinter3billede3.png" alt=""><p>Vinterpande med grønkål, svampe og flødestuvet perlebyg</p>
+    </a>
+        <a class="col-12 col-sm-5" href="vinter1.html">
+            <img src="img/vinter/vinter1billede1.png" alt=""> <p>Vinter-nudler med porre, kål og cremet sesamsauce</p>
         </a>
     </div>
 </section>
