--- a/index.html
+++ b/index.html
@@ -96,29 +96,77 @@
   </div>
 </div>
 
-<!--ÅRSTIDENS OPSKRIFTER-AFSNIT-->
-<div class="container-fluid orange">
-    <div class="container py-5">
-        <div class="mx-sm-5">
-          <h2>Årstidens Opskrifter</h2>
 
-          <img src="img/sommer/sommer1billede2.png" alt="">
 
-          <!--Aktuel årstid-->
-          <!--JS tilføjer billede og tekst-->
-          <div id="current-season" class="season-banner">
-          </div>
+
+<div class="container my-5">
+    <!-- Sommer -->
+    <div id="summer" class="season-container row d-none">
+      <div class="col-12 col-md-6">
+        <h2>Velkommen til sommeren!</h2>
+        <p>
+          Sommeren er højsæson for solmodne råvarer som jordbær, tomater, majs og friske bær. Det er den perfekte tid til lette retter, kolde salater og søde desserter, der giver energi på varme dage. Sommermaden er ligesom årstiden selv - frisk, farverig og fuld af liv.
           <br>
-          <!--Andre årstider-->
-          <h3>Udforsk andre årstider</h3>
-          
-          <img class="col-4" src="img/foraar/foraar1billede2.png" alt="">
-          <img class="col-4" src="img/efteraar/efteraar1billede2.png" alt="">
-          <img class="col-4" src="img/vinter/vinter1billede2.png" alt="">
+          Vi samles om maden i det gode vejr og nyder de råvarer, der kun findes i denne sæson.
+        </p>
+        <a href="sommer.html">Se sommerens opskrifter her</a>
+      </div>
 
-        </div>
+      <div class="col-12 col-md-6">
+        <img src="img/sommer/sommer1billede2.png" alt="Sommer" class="img-fluid rounded" />
+      </div>
     </div>
-</div>
+
+    <!-- Forår -->
+    <div id="spring" class="container-fluid orange season-container row d-none py-5">
+      <div class="col-12 col-md-6">
+        <h2>Velkommen til foråret!</h2>
+        <p>
+          Når foråret melder sin ankomst, åbner naturen sig op med nye grønne skud og friske råvarer. Det er       tiden, hvor asparges, rabarber og ærter kommer på bordet og giver maden et let og sprødt pust.Foråret handler om friskhed og fornyelse - både i naturen og i køkkenet.
+          <br>
+          Vi elsker de enkle retter, der lader råvarernes naturlige smag stå i centrum og samler os om spisebordet efter en lang vinter.
+        </p>
+        <a href="foraar.html">Find forårets opskrifter her</a>
+      </div>
+      <div class="col-12 col-md-6">
+        <img src="img/foraar/foraar1billede2.png" alt="Forår" class="img-fluid rounded" />
+      </div>
+    </div>
+
+    <!-- Efterår -->
+    <div id="autumn" class="season-container row d-none">
+      <div class="col-12 col-md-6">
+        <h2>Velkommen til efteråret!</h2>
+        <p>Efteråret bringer dybe farver og mere robuste råvarer som græskar, rodfrugter, kål og svampe. Det er sæson for varme og mættende retter, der giver både energi og hygge, når dagene bliver kortere og køligere. 
+          <br>
+          Vi tager imod årstidens overflod og bruger råvarerne til at skabe mad, der samler os og giver ro og nærvær.
+        </p>
+        <a href="efteraar.html">Oplev efterårets opskrifter her</a>
+      </div>
+      <div class="col-12 col-md-6">
+        <img src="img/efteraar/efteraar1billede2.png" alt="Efterår" class="img-fluid rounded" />
+      </div>
+    </div>
+
+    <!-- Vinter -->
+    <div id="winter" class="season-container d-none">
+      <div class="col-12 col-md-6">
+        <h2>Velkommen til vinteren!</h2>
+        <p>
+          Vinteren er tid til at trække sig lidt tilbage og nyde mad, der varmer og mætter. Rodfrugter, kål og æbler er nogle af de råvarer, der holder os i gang, når det er koldt og mørkt udenfor. Vintermaden er enkel, nærende og fyldt med traditioner, der samler os om bordet og giver energi til hverdagens udfordringer.
+          <br>
+          Vi samles om maden i vinterens stille ro og varme, og nyder råvarerne, der sætter deres særlige præg på denne tid.
+        </p>
+        <a href="vinter.html">Find vinterens opskrifter her</a>
+      </div>
+      <div class="col-12 col-md-6">
+        <img src="vinter.jpg" alt="Vinter" class="img-fluid rounded" />
+      </div>
+    </div>
+
+  </div>
+
+
 
 <!--E-MAGASIN-AFSNIT-->
 <section class="collage-container">
