--- a/vinter1.html
+++ b/vinter1.html
@@ -184,7 +184,7 @@
             <img src="img/vinter/vinter2billede1.png" alt=""><p> Vinterpasta med grønkålssauce og citron</p>
         </a>
         <a class="col-12 col-sm-5" href="vinter3.html">
-            <img src="img/vinter/vinter3billede3.png" alt=""><p></p>
+            <img src="img/vinter/vinter3billede3.png" alt=""><p>Vinterpande med grønkål, svampe og flødestuvet perlebyg</p>
         </a>
     </div>
 </section>
