--- a/vinter3.html
+++ b/vinter3.html
@@ -67,7 +67,7 @@
 <!--TEKST UNDER HERO-->
 
 <div class="container my-sm-5 px-sm-5">
-  <h2>Pasta med tomat, spidskål og ramsløgspesto</h2>
+  <h2>Vinterpande med grønkål, svampe og flødestuvet perlebyg</h2>
 </div>
 
 <!--INTRODUKTIONS-AFSNIT-->
@@ -76,12 +76,12 @@
     <!--Tekstfelt m. introduktion til side-->
     <!--Tekst skal fylde 12 kol. på mobil og op efter 8 kol. -->
     <div class="col-12 col-sm-6">
-      <p>Lækker, lun og klar på en solrig forårsaften! Pastaen vendes med cremet ramsløgspesto, søde tomater og letstegt spidskål – simpel hverdagslykke i en skål</p>
+      <p>En cremet og mættende hverdagsret med grønkål, svampe og byg – alt sammen lavet på én pande. Vintermad, der varmer helt ind.</p>
     </div>
     <!--Illustration til højre-->
     <!--Illustration skal ikke vises på mobil. Op efter fylder den 2 kol. og har 2 tomme kol. til venstre-->
     <div class="d-none d-sm-block col-sm-2 offset-sm-4">
-      <img src="#" alt="illustration">
+      <img src="img/illustrationer/porre.png" alt="illustration">
     </div>
   </div>
 </div>
@@ -101,8 +101,8 @@
     <!--sætter hver p ved siden af hinanden horisontalt-->
     <div class="d-flex justify-content-evenly">
         <p>2 personer</p>
-        <p>Arbejdstid: 20 min</p>
-        <p>Tid i alt: 50 min</p>
+        <p>Arbejdstid: 15 min</p>
+        <p>Tid i alt: 30 min</p>
     </div>
 </section>
 
@@ -114,41 +114,37 @@
     	    <div class="ingredienser">
                 <h3>Ingredienser</h3>
                     <ul>
-                        <li>150g pasta</li>
-                        <li>1 håndfuld spidskål</li>
-                        <li>8 cherrytomater</li>
-                        <li>1 håndfuld ramsløg</li>
-                        <li>1/2 dl olie</li>
-                        <li>1 spsk solsikkekerner</li>
-                        <li>Citronsaft</li>
+                        <li>100 g perlebyg</li>
+                        <li>1 lille rødløg</li>
+                        <li>150 g svampe</li>
+                        <li>1 stor håndfuld grønkål</li>
+                        <li>1 dl madlavningsfløde</li>
                     </ul>
             </div>
 
-        <img src="img/vinter/vinter3billede1.png" class="billede opskrift-billede1" alt="">
-        <img src="img/vinter/vinter3billede2.png" class="billede opskrift-billede2" alt="">
-        <img src="img/vinter/vinter3billede3.png" class="billede opskrift-billede3" alt="">
+        <img src="img/vinter/vinterloog.png" class="billede opskrift-billede1" alt="">
+        <img src="img/vinter/vinter3billede3.png" class="billede opskrift-billede2" alt="">
+        <img src="img/efteraar/efteraar3billede3.png" class="billede opskrift-billede3" alt="">
     </div>
 
 
 
     <div class="col fremgangsmaade">
       <h3>Fremgangsmåde</h3>
-        <p><strong>Kog pastaen</strong></p>
-            <p>Kog pastaen efter anvisning på pakken, og gem lidt kogevand til at justere konsistensen senere.</p>
+        <p><strong>Kog perlebyg</strong></p>
+            <p>Kog byggen efter anvisning på pakken (ca. 20 min). Hæld vandet fra, når den er mør.</p>
 
-            <p><strong>Lav pestoen</strong></p>
-            <p>Blend ramsløg, olie, kerner, citron og lidt salt.</p>
+            <p><strong>Forbered grønt</strong></p>
+            <p>Skær svampe i skiver og snit løg fint. Riv grønkålen i mindre stykker (fjern de groveste stilke).</p>
 
-            <p><strong>Forbered grøntsagerne</strong></p>
-            <p>Snit spidskål fint og steg den hurtigt på en pande med lidt olie, indtil den falder sammen og bliver let karamelliseret.</p>
-            <p>Skær tomaterne i halve og kom dem på panden sammen med kålene de sidste minutter af tilberedningen, så de bliver let opvarmede og bløde.</p>
+            <p><strong>Steg svampe og løg</strong></p>
+            <p>Varm olie på en stor pande. Steg svampe og løg i 5–7 min, til de er bløde og let gyldne. Krydr med salt og peber.</p>
 
-            <p><strong>Samle retten</strong></p>
-            <p>Vend den kogte pasta med pesto, spidskål og tomater. Tilsæt lidt af pastavandet, hvis retten virker for tør.</p>
+            <p><strong>Tilsæt grønkål</strong></p>
+            <p>Tilsæt den kogte byg og fløden til panden og vend det hele sammen. Varm igennem et par minutter. Smag til med salt, peber og evt. et skvæt citron.</p>
 
             <p><strong>Server</strong></p>
-            <p>Server med ekstra pesto og evt. revet ost eller friskhakkede urter på toppen.</p>
-      
+            <p>Top evt. med lidt revet ost, ristede solsikkekerner eller friske krydderurter.</p>
     </div>
   </div>
 </div>
@@ -177,12 +173,12 @@
     <h3>Hvad skal du lave i morgen?</h3>
 
     <div class="d-flex flex-column flex-sm-row justify-content-center align-items-center gap-3 mt-3">
-        <a class="col-12 col-sm-5" href="foraar2.html">
-            <img src="img/stemning/digital1.png" alt="">
-        </a>
-        <a class="col-12 col-sm-5" href="foraar3.html">
-            <img src="img/stemning/digital2.png" alt="">
-        </a>
+      <a class="col-12 col-sm-5" href="vinter1.html">
+        <img src="img/vinter/vinter1billede1.png" alt=""> <p>Vinter-nudler med porre, kål og cremet sesamsauce</p>
+    </a>
+    <a class="col-12 col-sm-5" href="vinter2.html">
+      <img src="img/vinter/vinter2billede1.png" alt=""><p> Vinterpasta med grønkålssauce og citron</p>
+  </a>
     </div>
 </section>
 
