--- a/alleopskrifter.html
+++ b/alleopskrifter.html
@@ -58,7 +58,7 @@
 
 <div class="container my-sm-5 px-sm-5">
   <h1>Alle opskrifter</h1>
-            <h4>Gør mere med mindre – lækre måltider til små budgetter.</h4>
+  <h4>Gør mere med mindre – lækre måltider til små budgetter.</h4>
 </div>
 
 <!--INTRODUKTIONS-AFSNIT-->
@@ -72,7 +72,7 @@
     <!--Illustration til højre-->
     <!--Illustration skal ikke vises på mobil. Op efter fylder den 2 kol. og har 2 tomme kol. til venstre-->
     <div class="d-none d-sm-block col-sm-2 offset-sm-4">
-      <img src="#" alt="illustration">
+      <img src="img/illustrationer/rodlog.png" alt="illustration">
     </div>
   </div>
 </div>
