--- a/foraar.html
+++ b/foraar.html
@@ -96,7 +96,7 @@
     </div>
 
 
-    <div class="container-fluid orange">
+    <div class="alle-foraar container-fluid orange">
         <div class="container py-5">
             <div class="col-12 py-4 col-sm-6 px-sm-5">
                 <h2>Smagen af forår</h2>
