--- a/index.html
+++ b/index.html
@@ -99,9 +99,9 @@
 
 
 
-<div class="container my-5">
+<div class="container-fluid orange py-5 px-5">
     <!-- Sommer -->
-    <div id="summer" class="season-container row d-none">
+    <div id="summer" class="season-container row d-none mx-sm-5">
       <div class="col-12 col-md-6">
         <h2>Velkommen til sommeren!</h2>
         <p>
@@ -113,12 +113,12 @@
       </div>
 
       <div class="col-12 col-md-6">
-        <img src="img/sommer/sommer1billede2.png" alt="Sommer" class="img-fluid rounded" />
+        <a href="sommer.html"><img src="img/sommer/sommer2billede2.png" alt="Sommer" class="img-fluid rounded" /></a>
       </div>
     </div>
 
     <!-- Forår -->
-    <div id="spring" class="container-fluid orange season-container row d-none py-5">
+    <div id="spring" class=" season-container row d-none mx-sm-5">
       <div class="col-12 col-md-6">
         <h2>Velkommen til foråret!</h2>
         <p>
@@ -129,12 +129,12 @@
         <a href="foraar.html">Find forårets opskrifter her</a>
       </div>
       <div class="col-12 col-md-6">
-        <img src="img/foraar/foraar1billede2.png" alt="Forår" class="img-fluid rounded" />
+        <a href="foraar.html"><img src="img/foraar/foraar1billede2.png" alt="Forår" class="img-fluid rounded"/></a>
       </div>
     </div>
 
     <!-- Efterår -->
-    <div id="autumn" class="season-container row d-none">
+    <div id="autumn" class="season-container row d-none mx-sm-5">
       <div class="col-12 col-md-6">
         <h2>Velkommen til efteråret!</h2>
         <p>Efteråret bringer dybe farver og mere robuste råvarer som græskar, rodfrugter, kål og svampe. Det er sæson for varme og mættende retter, der giver både energi og hygge, når dagene bliver kortere og køligere. 
@@ -144,12 +144,12 @@
         <a href="efteraar.html">Oplev efterårets opskrifter her</a>
       </div>
       <div class="col-12 col-md-6">
-        <img src="img/efteraar/efteraar1billede2.png" alt="Efterår" class="img-fluid rounded" />
+        <a href="efteraar.html"><img src="img/efteraar/efteraar2billede1ny.png" alt="Efterår" class="img-fluid rounded"/></a>
       </div>
     </div>
 
     <!-- Vinter -->
-    <div id="winter" class="season-container d-none">
+    <div id="winter" class="season-container d-none mx-sm-5">
       <div class="col-12 col-md-6">
         <h2>Velkommen til vinteren!</h2>
         <p>
@@ -160,7 +160,7 @@
         <a href="vinter.html">Find vinterens opskrifter her</a>
       </div>
       <div class="col-12 col-md-6">
-        <img src="vinter.jpg" alt="Vinter" class="img-fluid rounded" />
+        <a href="vinter.html"><img src="img/vinter/vinter1billede1.png" alt="Vinter" class="img-fluid rounded" /></a>
       </div>
     </div>
 
