--- a/foraar2.html
+++ b/foraar2.html
@@ -169,7 +169,7 @@
 <section class="container my-5 px-sm-5">
     <h3>Hvad skal du lave i morgen?</h3>
 
-    <div class="d-flex flex-column flex-sm-row justify-content-center align-items-center gap-3 mt-3">
+    <div class="alle-foraar d-flex flex-column flex-sm-row justify-content-center align-items-center gap-3 mt-3">
       <a class="col-12 col-sm-5" href="foraar3.html">
         <img src="img/foraar/foraar3billede1.png" alt=""><p>Forårsnudler med radiser, porre og sesam</p>
     </a>
