--- a/efteraar.html
+++ b/efteraar.html
@@ -100,7 +100,7 @@
                 <p>Her finder du opskrifter med alt det bedste fra efteråret – som græskar, rødbeder, pastinak og æbler. Retter, der smager af stearinlys, tæpper og lange, hyggelige middage med dem, du holder af.
                 </p>
             </div>
-        <div class="row align-items-start px-sm-5">
+        <div class="alle-efteraar row align-items-start px-sm-5">
             <div class="col-12 col-sm-4 py-3">
                 <a href="efteraar1.html"><img src="https://placehold.co/80x100" alt=""></a>
                 <a href="efteraar1.html"><h3>Opskrift</h3></a>
