--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <div class="position-absolute top-0 start-0 w-100 h-100 d-flex flex-column justify-content-center       align-items-center text-center">
             <img class="logo-forside" src="img/logo.png" alt="">
             <h1>Lille Skål</h1>
-            <a href="alleopskrifter.html">Opskrifter til små køkkener og store smage ></a>
+            <h4 class="call-to-action"><a href="alleopskrifter.html">Opskrifter til små køkkener og store smage ></a></h4>
         </div>
 </div>
 
