--- a/sommer2.html
+++ b/sommer2.html
@@ -176,7 +176,7 @@
 <section class="container my-5 px-sm-5">
     <h3>Hvad skal du lave i morgen?</h3>
 
-    <div class="d-flex flex-column flex-sm-row justify-content-center align-items-center gap-3 mt-3">
+    <div class="alle-sommer d-flex flex-column flex-sm-row justify-content-center align-items-center gap-3 mt-3">
         <a class="col-12 col-sm-5" href="sommer3.html">
           <img src="img/sommer/sommer3billede2.png" alt=""><p>Sommerpizza med sæsonens grønt </p>
         </a>
