--- a/efteraar3.html
+++ b/efteraar3.html
@@ -173,7 +173,7 @@
 <section class="container my-5 px-sm-5">
   <h3>Hvad skal du lave i morgen?</h3>
 
-  <div class="d-flex flex-column flex-sm-row justify-content-center align-items-center gap-3 mt-3">
+  <div class="alle-efteraar d-flex flex-column flex-sm-row justify-content-center align-items-center gap-3 mt-3">
     <a class="col-12 col-sm-5" href="efteraar1.html">
       <img src="img/efteraar/efteraar2billede2.png" alt=""><p>Efterårs-gnocchi med tomat, salvie og karamelliseret løg</p>
   </a>
