--- a/vinter3.html
+++ b/vinter3.html
@@ -172,7 +172,7 @@
 <section class="container my-5 px-sm-5">
     <h3>Hvad skal du lave i morgen?</h3>
 
-    <div class="d-flex flex-column flex-sm-row justify-content-center align-items-center gap-3 mt-3">
+    <div class="alle-vinter d-flex flex-column flex-sm-row justify-content-center align-items-center gap-3 mt-3">
       <a class="col-12 col-sm-5" href="vinter1.html">
         <img src="img/vinter/vinter1billede1.png" alt=""> <p>Vinter-nudler med porre, kål og cremet sesamsauce</p>
     </a>
