--- a/foraar.html
+++ b/foraar.html
@@ -103,7 +103,7 @@
                 <p>Her finder du opskrifter med alt det bedste fra foråret – som asparges, spinat, radiser og nye kartofler.
                 Retter, der smager af solskin, spirende altaner og middage med åbne vinduer.</p>
             </div>
-        <div class="row align-items-start px-sm-5">
+        <div class="row align-items-start px-sm-5 text-center">
             <div class="col-12 col-sm-4 py-3">
                 <a href="foraar1.html"><img src="img/foraar/foraaropskrift1.png" alt=""></a>
                 <a href="foraar1.html"><h3>Opskrift</h3></a>
