--- a/efteraar2.html
+++ b/efteraar2.html
@@ -174,7 +174,7 @@
 <section class="container my-5 px-sm-5">
   <h3>Hvad skal du lave i morgen?</h3>
 
-  <div class="alle-efteraar d-flex flex-column flex-sm-row justify-content-center align-items-center gap-3 mt-3">
+  <div class="alle-efteraar d-flex flex-column flex-sm-row justify-content-center align-items-center gap-3 mt-3 text-center">
     <a class="col-12 col-sm-5" href="efteraar3.html">
       <img src="img/efteraar/efteraar3billede2.png" alt=""><p>Efterårspande med karamelliserede porrer og gulerødder</p>
   </a>
