--- a/foraar3.html
+++ b/foraar3.html
@@ -168,7 +168,7 @@
 <section class="container my-5 px-sm-5">
     <h3>Hvad skal du lave i morgen?</h3>
 
-    <div class="alle-foraar d-flex flex-column flex-sm-row justify-content-center align-items-center gap-3 mt-3">
+    <div class="alle-foraar d-flex flex-column flex-sm-row justify-content-center align-items-center gap-3 mt-3 text-center">
         <a class="col-12 col-sm-5" href="foraar2.html">
             <img src="img/foraar/foraar2billede4.png" alt=""><p>Forårs-orzo med tomater og citron</p>
         </a>
