--- a/sommer.html
+++ b/sommer.html
@@ -100,7 +100,7 @@
                 <p>Her finder du opskrifter med alt det bedste fra sommerens køkken – som squash, jordbær, ærter og spidskål. Retter, der smager af feriefornemmelser, kolde drikke og aftener, der strækker sig lidt længere end resten af året.
                 </p>
             </div>
-        <div class="alle-sommer row align-items-start px-sm-5">
+        <div class="alle-sommer row align-items-start px-sm-5 text-center">
             <div class="col-12 col-sm-4 py-3">
                 <a href="sommer1.html"><img src="https://placehold.co/80x100" alt=""></a>
                 <a href="sommer1.html"><h3>Opskrift</h3></a>
