--- a/vinter.html
+++ b/vinter.html
@@ -101,7 +101,7 @@
                 <p>Her finder du opskrifter med vinterens råvarer som rødkål, pastinak, jordskok og græskar. Retter, der luner, mætter og giver ro midt i mørket – perfekte til både hverdagsmad og hyggelige aftener med venner.
                 </p>
             </div>
-        <div class="alle-vinter row align-items-start px-sm-5">
+        <div class="alle-vinter row align-items-start px-sm-5 text-center">
             <div class="col-12 col-sm-4 py-3">
                 <a href="vinter1.html"><img src="https://placehold.co/80x100" alt=""></a>
                 <a href="vinter1.html"><h3>Opskrift</h3></a>
