--- a/alleopskrifter.html
+++ b/alleopskrifter.html
@@ -161,10 +161,10 @@
 <!--Karussel til mobil-verison-->
 <!--Karussel Forår-->
 <main class="container my-5 d-block d-md-none">
-  <div class="row season-container">
+  <div class="row carousel-container">
 
     <!-- Forår -->
-    <div class="col-12 col-md-6 col-lg-3 mb-4">
+    <div class="col-12 col-md-6 col-lg-3 mb-4 container-fluid orange py-4">
       <div id="carousel-foraar" class="carousel slide" data-bs-touch="false">
         <div class="carousel-inner">
           <h2 class="px-3">Forår</h2>
@@ -230,7 +230,7 @@
     </div>
 
     <!-- Efterår -->
-    <div class="col-12 col-md-6 col-lg-3 mb-4">
+    <div class="col-12 col-md-6 col-lg-3 mb-4 container-fluid orange py-4">
       <div id="carousel-efteraar" class="carousel slide" data-bs-touch="false">
         <h2 class="px-3">Efterår</h2>
         <div class="carousel-inner">
