--- a/alleopskrifter.html
+++ b/alleopskrifter.html
@@ -164,7 +164,7 @@
   <div class="row carousel-container">
 
     <!-- Forår -->
-    <div class="col-12 col-md-6 col-lg-3 mb-4 container-fluid orange py-4">
+    <div class="alle-foraar col-12 col-md-6 col-lg-3 mb-4 container-fluid orange py-4">
       <div id="carousel-foraar" class="carousel slide" data-bs-touch="false">
         <div class="carousel-inner">
           <h2 class="px-3">Forår</h2>
@@ -197,7 +197,7 @@
     </div>
 
     <!-- Sommer -->
-    <div class="col-12 col-md-6 col-lg-3 mb-4">
+    <div class="alle-sommer col-12 col-md-6 col-lg-3 mb-4">
       <div id="carousel-sommer" class="carousel slide" data-bs-touch="false">
         <h2 class="px-3">Sommer</h2>
         <div class="carousel-inner">
@@ -230,7 +230,7 @@
     </div>
 
     <!-- Efterår -->
-    <div class="col-12 col-md-6 col-lg-3 mb-4 container-fluid orange py-4">
+    <div class="alle-efteraar col-12 col-md-6 col-lg-3 mb-4 container-fluid orange py-4">
       <div id="carousel-efteraar" class="carousel slide" data-bs-touch="false">
         <h2 class="px-3">Efterår</h2>
         <div class="carousel-inner">
@@ -263,7 +263,7 @@
     </div>
 
     <!-- Vinter -->
-    <div class="col-12 col-md-6 col-lg-3 mb-4">
+    <div class="alle-vinter col-12 col-md-6 col-lg-3 mb-4">
       <div id="carousel-vinter" class="carousel slide" data-bs-touch="false">
         <h2 class="px-3">Vinter</h2>
         <div class="carousel-inner">
